--- a/gpt4/.streamlit/config.toml
+++ b/gpt4/.streamlit/config.toml
@@ -1,8 +1,6 @@
 [theme]
 base="dark"
 
-gatherUsageStats = false
-
 # screens and components. Examples of widgets using this color are st.slider and st.checkbox.
 primaryColor = "#799933"
 
@@ -19,3 +17,10 @@ textColor = "#f4f4f9"
 # Default: "sans serif"
 font = "monospace"
 
+#Better not to change color values w/o discussing with PaulB
+
+[server]
+port = 80
+
+[browser]
+gatherUsageStats = false
